# dumbcheck

./: readme.md  tasty-dumbcheck.cabal
